# CppSimpleProjectTemplate

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  README.md
cmake/: ClangTidy.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
tests/: CMakeLists.txt  test_example.cpp
